tests/rosetta/out/Zig/bitmap-read-a-ppm-file.error
zig build: exit status 1
/tmp/bitmap-read-a-ppm-file.zig:159:8: error: expected 'while', 'for', 'inline', or '{', found 'an identifier'
